fix: added overflow option so that pie graphs don't spill

--- a/src/app/home-page/habit-dashboard/habit-dashboard.component.css
+++ b/src/app/home-page/habit-dashboard/habit-dashboard.component.css
@@ -1,9 +1,12 @@
 #habit-pie-chart-holder {
     display: grid;
-    grid-template-columns: repeat(7, 150px);
+    /* grid-template-columns: repeat(7, 150px); */
+    grid-template-columns: repeat(7, minmax(140px, 1fr));
     justify-content: space-around;
     grid-template-rows: 170px;
     width: 70%;
+    max-width: 70%;
+    overflow-x: auto;
     margin-left: auto;
     margin-right: auto;
     border-color: black;
