--- a/src/app/home-page/habit-dashboard/habit-pie-chart/habit-pie-chart.component.css
+++ b/src/app/home-page/habit-dashboard/habit-pie-chart/habit-pie-chart.component.css
@@ -1,12 +1,23 @@
+.habit-pit-chart-holder {
+    max-width: 140px;
+    height: 170px !important;
+}
+
 #habit-pie-chart {
     margin-top: 0%;
+    max-width: 140px;
+    height: 150px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: auto;
 }
 
 #habit-pie-chart-title {
     text-align: center;
     font-size: large;
-    margin-bottom: 0%;
+    margin-bottom: 0;
     margin-top: 0%;
+    height: 30px
 }
 
 .selected {
